# tiD

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  HANDOFF_MVP.md  PLAN.md  README.md  START_tiD.bat  START_tiD.command
.cargo/: config.toml
.github/workflows/: build-release.yml
data/sources/: output_TI_CVM.xlsb
frontend/: package.json  vite.config.js
scripts/: build_release.sh  release_v1.sh
src/: lib.rs  main.rs  paths.rs
src/api/: assumptions.rs  churn.rs  compliance.rs  error.rs  export.rs  mod.rs  products.rs  routes.rs  upload.rs
src/engine/: churn.rs  data.rs  economics.rs  formula.rs  mod.rs  pricing.rs  types.rs  versioning.rs
src/export/: compare.rs  mod.rs  package.rs  writer.rs
tests/: economics_test.rs
