[package]
name = "tid"
version = "0.1.0"
edition = "2024"
description = "tiC reimagined in Rust — CVM Pricing Cockpit"
authors = ["Dou <doureallydo@gmail.com>"]
license = "MIT"

[dependencies]
# Excel I/O
calamine = "0.26"
rust_xlsxwriter = "0.82"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
indexmap = "2"
zip = "2"

[dev-dependencies]
assert_approx_eq = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "tid"
path = "src/main.rs"

[[bin]]
name = "tid-compliance"
path = "src/bin/compliance.rs"